change html for efects hide

--- a/index.html
+++ b/index.html
@@ -20,16 +20,23 @@
                 <div class="nav-wrapper aladito">
 
                     <a href="#" class="brand-logo">Chat</a>
-                    <ul id="nav-mobile" class="right side-nav"> 
+                    <ul id="nav-mobile" class="right side-nav">
 
                     </ul>
                 </div>
             </nav>
+            
             <ul id="nav-mobile" class="side-nav fixed">
-                <li class="logo"><img id="logo-container" src="img/photo.jpg" class="brand-logo oli">
-                    <li class="bold"><a href="#">Chat</a></li>
-                    <li class="bold"><a href="#">Proyectos</a></li>
-                    <li class="bold"><a href="#">Album de musicas</a></li>
+                <img class="logo-chat" alt="" src="src/photo.jpg"/>
+              <div class="menu-options-more">
+                <li class="bold"><a href="#">Menu</a></li>
+                <div id="menu-initial" class="hidden-menu">
+                  <li class="bold"><a href="#">Chat</a></li>
+                  <li class="bold"><a href="#">Proyectos</a></li>
+                  <li class="bold"><a href="#">Album de musicas</a></li>
+                </div>
+             </div>
+
             </ul>
         </header>
 
