--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
             
             <ul id="nav-mobile" class="side-nav fixed">
-                <img class="logo-chat" alt="" src="src/photo.jpg"/>
+                <img class="logo-chat" alt="" src="img/photo.jpg"/>
               <div class="menu-options-more">
                 <li class="bold"><a href="#">Menu</a></li>
                 <div id="menu-initial" class="hidden-menu">
